@@ -46,7 +46,8 @@ endif::[]
 * Fix `HttpUrlConnection` instrumentation issue (affecting distributed tracing as well) when using HTTPS without using
   `java.net.HttpURLConnection#disconnect` - {pull}1447[1447]
 * Fixes class loading issue that can occur when deploying multiple applications to the same application server - {pull}1458[#1458]
-* Fix ability to disable agent on startup wasn't working for runtime attach {pull}1444[1447]
+* Fix ability to disable agent on startup wasn't working for runtime attach {pull}1444[1444]
+* Avoid `UnsupportedOperationException` on some spring application startup {pull}1464[1464]
 * Fix ignored runtime attach `config_file` {pull}1469[1469]
 
 [[release-notes-1.x]]
